tests/errors/semantics/too_many_args_struct_init_basic.odl
main :: () -> void {
    foo_t :: struct {
        a := 5;
        b := false;
        c: f64 = 32.5;
    };

    foo := foo_t.{c: 5.0, 5, 6};

    printint(foo.a);
    println();
};